--- a/meta/authors.yml
+++ b/meta/authors.yml
@@ -1,6 +1,5 @@
 authors:
-  - slug: wutali
-    name: Takahiro Fujiwara
+  - slug: seoulection
+    name: Brian Sung
     introduction:
-      Co-founder and CTO at Fuller, Inc. / Software & Data Engineer /
-      Python / Golang / React
+      software crafter @ 8th Light
