--- a/config.json
+++ b/config.json
@@ -14,5 +14,6 @@
     }
   ],
   "posts_per_page": 5,
-  "github_account": "seoulection"
+  "github_account": "seoulection",
+  "twitter_account": "@my-twitter"
 }
